fixed some stupid cv spacing bugs

--- a/_scss/_cv.scss
+++ b/_scss/_cv.scss
@@ -4,10 +4,9 @@
     margin: 0.1em 0;
   }
   h2 {
-    margin: 0.1em 0;
+    margin: 1em 0;
   }
   h4 {
-    margin-top: 0.8em;
     margin-bottom: 0.1em;
   }
   p {
@@ -19,5 +18,4 @@
       display: block;
     }
   }
-
 }
